c/examples/writing-a-c-compiler-tests/tests/chapter_18/invalid_types/extra_credit/other_features/prefix_incr_nested_struct.c
// Can't apply ++/-- to any structures, including nested ones
struct inner {
    int i;
};
struct outer {
    struct inner s;
};
int main(void) {
    struct outer x = {{1}};
    ++x.s;
    return 0;
}